Bug 1306894 Part 1: Cache baseline from nsFlexContainerFrame::Reflow() for use in later calls to GetLogicalBaseline(). r=dholbert

MozReview-Commit-ID: JXUK8a0L1RZ

--HG--
extra : rebase_source : 9c4f885ac883429512073f38dfa1226058d8b8a5